[tool.poetry]
name = "companyapi"
version = "0.1.0"
description = "companyapi"
authors = ["Heck"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
pandas = "^2.2.3"
requests = "^2.32.3"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
